fixing cause of httpcontext.items, using session now.

--- a/MvcFlash.Sample/MvcFlash.Sample.csproj
+++ b/MvcFlash.Sample/MvcFlash.Sample.csproj
@@ -220,6 +220,7 @@
     <Content Include="Views\Home\Custom.cshtml" />
     <Content Include="Views\Shared\_Custom.cshtml" />
     <Content Include="Views\Home\Template.cshtml" />
+    <Content Include="Views\Home\Redirected.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
