--- a/MvcFlash.Core/MvcFlash.Core.csproj
+++ b/MvcFlash.Core/MvcFlash.Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Providers\IFlashMessagePusher.cs" />
     <Compile Include="Providers\IFlashMessagePopper.cs" />
     <Compile Include="Providers\IFlashMessageService.cs" />
+    <Compile Include="Providers\TempDataFlashMessageService.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
