--- a/MvcFlash.nuspec
+++ b/MvcFlash.nuspec
@@ -2,7 +2,7 @@
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>MvcFlash</id>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
     <authors>Khalid Abuhakmeh</authors>
     <owners>Khalid Abuhakmeh</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -18,5 +18,6 @@
     <file src="MvcFlash.Core/bin/Release/MvcFlash.Core.dll" target="lib" />
     <file src="MvcFlash.Sample/Views/Shared/Flash.cshtml" target="content/Views/Shared" />
     <file src="web.config.transform" target="content" />
+    <file src="MvcFlash.Sample/Content/flash/*" target="content/Content/flash" />
   </files>
 </package>
