--- a/MvcFlash.Sample/MvcFlash.Sample.csproj
+++ b/MvcFlash.Sample/MvcFlash.Sample.csproj
@@ -222,6 +222,8 @@
     <Content Include="Views\Shared\_Custom.cshtml" />
     <Content Include="Views\Home\Template.cshtml" />
     <Content Include="Views\Home\Redirected.cshtml" />
+    <Content Include="Views\Home\Unique.cshtml" />
+    <Content Include="Views\Home\Attributes.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
