--- a/MvcFlash.Tests/MvcFlash.Tests.csproj
+++ b/MvcFlash.Tests/MvcFlash.Tests.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="DynamicHelpersTests.cs" />
     <Compile Include="FlashTests.cs" />
-    <Compile Include="HttpContextFlashMessageServiceTests.cs" />
+    <Compile Include="HttpSessionMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionFlashMessageServiceTests.cs" />
   </ItemGroup>
