--- a/MvcFlash.nuspec
+++ b/MvcFlash.nuspec
@@ -3,10 +3,12 @@
   <metadata schemaVersion="2">
     <id>MvcFlash</id>
     <version>1.0.0</version>
+    <title>MvcFlash</title>
     <authors>Khalid Abuhakmeh</authors>
     <owners>Khalid Abuhakmeh</owners>
     <licenseUrl>https://github.com/khalidabuhakmeh/MvcFlash/raw/master/MIT-LICENSE.txt</licenseUrl>
     <projectUrl>https://github.com/khalidabuhakmeh/MvcFlash</projectUrl>
+    <iconUrl>https://github.com/khalidabuhakmeh/MvcFlash/raw/master/icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>There are times where you would like to pass a message up to the view, but you aren’t sure where the redirects will end up last. That is where MvcFlash comes in. You push messages into MvcFlash and then call Flash() when you need the messages display. A super simple implementation that just works. Download the source, or go to the GitHub project page to see all the things you can do.</description>
     <summary>There are times where you would like to pass a message up to the view, but you aren’t sure where the redirects will end up last. That is where MvcFlash comes in. You push messages into MvcFlash and th</summary>
